--- a/Permutation/test.tex
+++ b/Permutation/test.tex
@@ -1,8 +1,10 @@
 \documentclass[6pt, twocolumn]{ctexart}
 %\usepackage{multicol}
+\usepackage{color}
 \usepackage{CJK}
 \usepackage{array}
 \usepackage{rotating}   % 图片旋转 
+\usepackage{subfigure}
 \usepackage{graphicx}   % 插图必用宏包 
 \usepackage{biblatex}
 \usepackage{amsmath}
@@ -82,39 +84,181 @@ p=p_1p_2\cdots p_n
 	\item 翻转所有大于$p_i$数的箭头方向，即可得到下 一个排列；
 \end{enumerate}
 邻位对换法也可以通过中介数来生成序列的全 排列。。设当前序列的中介数为$a = a_1\cdots c_{n-1}$，下一个排列为$p = p_1 \cdots p_n$，则从排列的右端到左端，依次判断$p_i$的奇偶性。若$p_i$为奇数，其方向性由$a_{i-1}$决定，奇向右、偶向左；若$p_i$为偶数，其方向性决 定于$a_{i-1}+a_{i-2}$的奇偶性，同样是奇向右、偶向左。当得到方向性后，$a_i$的值就是背向$p_i$的方向直到排列 边界这个区间里比$p_i$小的数字的个数。如此就能得 到邻位对换法的中介数，同理，可以通过中介数推 断当前序列的方向，从而得出该排列。
-\section{基于邻位对换法的一种改进}
-使用 邻位对换法产生全排列的详细过程可见2.4小节。其主要过程有三大部分，分别查找最大可移动数，生成新的排列，修改箭头方向\cite{王晓东2008算法设计与分析}。其中生 成新排列只需按照可移动数的方向和相邻位置元素 交换即可，复杂度为$O(1)$；修改箭头方向只需将所有大于该可移动数的方向反转即可，复杂度为$O(n)$。以上两步是不可避免的，故而查找可移动数这一步 骤就成为了决定整个算法复杂度\cite{}的关键。
-\subsection{最大可移动数}
-最大可移动数是指沿着箭头方向有小于该数的 最大元素。求最大可移动数的蛮力方法就是从大到 小遍历排列中的元素，直到找见某个元素，该元素 满足沿着该元素的箭头方向有小于该元素的数。这 样查找最大可移动数的复杂度为$O(n^2)$。
-\begin{table*}
-\centering 
-    \caption {最大可移动数序列}
-    \begin{tabular}{|m{1cm}|m{8cm}|}
-    \hline
-    n=2 & 2                                                                                                                     \\ \hline
-    n=3 & 33233                                                                                                                 \\ \hline
-    n=4 & 44434443444244434443444                                                                                               \\ \hline
-    n=5 & 5555455554555545555355554555545555455553 5555455554555545555255554555545555455553 55554555545555455553555545555455554 \\ \hline
-    \end{tabular}
-\end{table*}
 
-观察不同n值最大可移动数序列，如表 1 所示。 可以看到可移动数的选择存在一定规律：
-\begin{enumerate}
-	\item 可移动数在 $2$ 到 $n$ 之间；
-	\item 连续可移动数 $i$ 的个数为 $i-1$；
-	\item 这$n! − 1$个可移动数平衡对称分布；
-	\item $n$ 的可移动数序列可由$n − 1$的可移动数序列 得到：在$n − 1$的可移动数序列的每一个空插入连续 的$n − 1$个$n$。
-\end{enumerate}
-根据以上观察，可以计算使用邻位对换法生成的$n(n-1)$位全排列的第$i$个可移动数为：
 
+
+
+
+\section{基于中介数的求后续排列优化}
+在很多应用场景下，我们需要求出某个排列后面的第$m$个排列。\textcolor{red}{比如...？}设原排列为$P$，目标排列即原排列的后续第$m$个排列为$\bar{P}$。在字典序法，递增进位制法，递减进位制法和邻位对换法中求$\bar{P}$的方法一般为首先找到原排列的中介数$A$，然后将中介数加$m$得到新的中介数$\bar{A}$，依据新的中介数找到目标排列。本节基于动态规划的思想，提出了一种优化求解中介数的算法，该算法在一般情况下可以优化一般算法$3-3.5$倍时间。
+\subsection{求后续排列的一般算法}
+以字典序算法为例，算法\ref{next_permutation} 给出了求目标排列的基本流程。首先通过GET\_AGENCY函数获取原排列$P$的中介数$A$，将$m$按照中介数进制（从左到右每位的进制依次是$n,n-1,...,2$）表示，得到$A_m$（第3-6行）。然后将$A$和$A_m$相加，得到$\bar{A}$（第7-17行）。最后根据新的中介数$\bar{A}$求出目标排列$\bar{P}$。
+\begin{algorithm}
+\caption{NEXT\_PERMUTATION (P,m,n)}
+\label{next_permutation}
+\begin{algorithmic}[1]
+\STATE $A=$ GET\_AGENCY$(P,n)$
+\STATE {$A_m,\bar{A},\bar{P} \leftarrow [0]$}
+\FOR{$i \leftarrow n-1$ to $1$} 
+\STATE {$A_m[i] \leftarrow m\%(n+1-i)$}
+\STATE {$m \leftarrow m/(n+1-i)$}
+\ENDFOR
+\STATE {$flag,tmp \leftarrow 0$}
+\FOR{$i \leftarrow n-1$ to $1$} 
+\STATE {$tmp \leftarrow A[i]+A_m[i]+flag$}
+\IF{$tmp\ge n+1-i$}
+\STATE {$\bar{A}[i] \leftarrow tmp-(n+i-i)$}
+\STATE {$flag \leftarrow 1$}
+\ELSE
+\STATE {$\bar{A}[i] \leftarrow tmp$}
+\STATE {$flag \leftarrow 0$}
+\ENDIF
+\ENDFOR
+\STATE calculate $\bar{P}$ from $\bar{A}$
+\RETURN $\bar{P}$
+\end{algorithmic}
+\end{algorithm}
+
+
+
+\iffalse
 \begin{equation}
 f(n,i) =\begin{cases}
 n&if \quad i \ne 0(mod \quad n)\\
 f(n-1,\lfloor \frac{i}{n} \rfloor ) & else	
 \end{cases}
 \end{equation}
-\subsection{优化算法复杂度分析}
-使用公式(1)得到最大可移动数的过程不需要遍 历其他元素，在给定$n$和$i$的情况下即可求得最大可 移动数，故而复杂度为$O(1)$。$n$的全排列个数为$n!$， 使用蛮力的邻位对换算法复杂度为$O(n^2 * n!)$，而基 于公式(1)的邻位对换算法复杂度为$O(n*n!)$，显然从 理论上来说，改进后的算法复杂度更低，效率更高。
+
+
+\begin{equation}
+A[I[i]]=\begin{cases}
+i−1−A[I[i]]       \quad \quad  S1=S         \\
+A[I[i]]        \quad   \quad \quad \quad   S2=S   \\
+\begin{cases}
+A[I[i+1]]+A[I[i]] \quad I[i]<I[i+1]  \\
+A[I[i+1]]−A[I[i]]−1  \quad I[i]>I[i+1] \\
+\end{cases}
+\end{cases}
+\end{equation}
+
+\begin{equation}
+A[I[i]]=\left\{
+\begin{array}{ll}
+i−1−A[I[i]] &  S1=S         \\
+A[I[i]]     &  S2=S   \\
+  \multicolumn{2}{l}{\left\{
+  \begin{array}{llll}
+    A[I[i+1]]+A[I[i]]   & I[i]<I[i+1]  \\
+    A[I[i+1]]−A[I[i]]−1 & I[i]>I[i+1] \\
+  \end{array}
+  \right.}
+\end{array}\right.
+\end{equation}
+\fi
+
+
+
+\subsection{求中介数的一般算法}
+在字典序算法中，中介数$A[i]$表示$P[i]$右边比$P[i]$小的数字的个数。算法\ref{get_agency} 给出了求解中介数的一般算法。该算法包括两层循环，外层循环遍历排列中的每一个数，内层循环找出这个数对应的中介数，即找出该数右侧比它小的数字个数。因此算法\ref{get_agency} 的时间复杂度为$O(n^2)$。当$n=100000$时，仅求解中介数就需要大约$24s$，这是十分耗费时间的。因此改进中介数的求解算法是十分必要的。
+
+\begin{algorithm}
+\caption{GET\_AGENCY (P,n)}
+\label{get_agency}
+\begin{algorithmic}[1]
+\STATE {$A \leftarrow [0]$}
+\FOR{$i \leftarrow 1$ to $n-1$} 
+\FOR{$j \leftarrow i+1$ to $n$} 
+\IF {$P[j]<P[i]$}
+\STATE {$A[i] \leftarrow A[i]+1$}
+\ENDIF
+\ENDFOR
+\ENDFOR
+\RETURN $A$
+\end{algorithmic}
+\end{algorithm}
+
+
+
+\subsection{求中介数的优化算法}
+通过观察中介数的求解过程，我们得到了两个重要的结论：
+\begin{enumerate}
+  \item 当求解排列中某个数$i$的中介数时，设$i$左右两侧排列分别为$P1$，$P2$，若$i$左侧数字个数小于右侧数字个数，即$|P1|<|P2|$，那么扫描$P1$中比$i$小的数字个数可以更快的得到$i$的中介数；
+  \item 设$i$与$i+1$之间的排列为$P3$，若已知$i+1$的中介数，且$i$与$i+1$在排列$P$中距离很小，即$|P3|<min(|P1|,|P2|)$，那么可以通过$i+1$的中介数快速求解出i的中介数；
+\end{enumerate}
+设$P=P[1],P[2],...,P[n]$，数组$I$存储排列中每个数的下标，即$I[P[i]]=i$。综合以上观察，在求解排列中数i的中介数时，由于$i$在$P$中的位置为$I[i]$，故$P1=P[1:I[i]]$，$P2=P[I[i]+1:n]$，$P3=P[I[i]:I[i+1]]$，令$P_{min}=min(P1,P2,P3)$，即$P1$，$P2$，$P3$中最短的一段，通过扫描$P_{min}$中比$i$小的数字个数（设为$t$）来计算$i$的中介数，即$A[I[i]]$，可以有效缩短计算中介数的时间。当$P1$最短时，$t$为$i$左侧比$i$小的数字个数，而比$i$小的数字个数共有$i-1$个，故$A[I[i]]=i-1-t$；当$P2$最短时，$A[I[i]]=t$；当$P3$最短时，若$i$位于$i+1$左侧，即$P=...,i,...,i+1,...$，由于比$i+1$小的数都会比i小，故而$i$的中介数等于$t$加上$i+1$的中介数，若$i$位于$i+1$的右侧，即$P=...,i+1,...,i,...$，则$i$的中介数等于$i+1$的中介数减去$1+t$。算法\ref{get_agency_optimization} 展示了这一过程。
+
+\iffalse
+\begin{equation}
+A[I[i]]=\left\{
+\begin{array}{ll}
+i−1−A[I[i]] &  S1=S         \\
+A[I[i]]     &  S2=S   \\
+A[I[i+1]]+A[I[i]]  & S3=S  \\
+\end{array}\right.
+\end{equation}
+
+\begin{equation}
+A[I[i]]=\left\{
+\begin{array}{ll}
+i−1−A[I[i]] &  S1=S         \\
+A[I[i]]     &  S2=S   \\
+A[I[i+1]]−A[I[i]]−1  & S3=S  \\
+\end{array}\right.
+\end{equation}
+\fi
+
+
+\begin{algorithm}
+\caption{GET\_AGENCY\_OPTIMIZATION (P,n)}
+\label{get_agency_optimization}
+\begin{algorithmic}[1]
+\STATE calculate $I$ from $P$
+\STATE calculate $A[I[n]]$
+\FOR{$i \leftarrow n-1$ to $1$} 
+\STATE {$P1 \leftarrow P[1:I[i]]$}
+\STATE {$P2 \leftarrow P[I[i]+1:n]$}
+\STATE {$P3 \leftarrow P[I[i]:I[i+1]]$}
+\STATE {$P_{min} \leftarrow min(P1,P2,P3)$}
+\STATE {$t \leftarrow$ the number of numbers in $P_{min}$ smaller than $i$}
+\IF {$P1=P_{min}$}
+\STATE {$A[I[i]] \leftarrow i-1-t$}
+\ELSIF {$P2=P_{min}$}
+\STATE {$A[I[i]] \leftarrow t$}
+\ELSE 
+\IF {$I[i]<I[i+1]$}
+\STATE {$A[I[i]] \leftarrow A[I[i+1]]+t$}
+\ELSE
+\STATE {$A[I[i]] \leftarrow A[I[i+1]]-t-1$}
+\ENDIF
+\ENDIF
+\ENDFOR
+\RETURN $A$
+\end{algorithmic}
+\end{algorithm}
+
+
+\subsection{优化算法性能分析}
+优化算法每次扫描的排列序列为$P1$，$P2$，$P3$中最短的一段，因此从理论上来说优化算法可以有效减少求中介数的时间。而且当排列较为均匀，即$\sum_{i=1}^{n-1}\left|I[i]-I[i+1]\right|$较小时（比如$P=1,2,3,...,n$），由于$P3$很小，优化算法可以在接近$O(n)$的时间内求出排列的中介数。为了对优化算法进行性能分析，我们设计了一系列实验来进行测试。
+图\ref{random_agency} 给出了求中介数一般算法和优化算法对随机生成排列的实验结果。由图可知，当$n<1000$时，GET\_AGENCY和GET\_AGENCY\_OPTIMIZATION的性能所差无几，而当$n>1000$后，优化算法大致可以加速一般算法$3-3.5$倍。
+图\ref{even_agency} 给出了算法关于均匀数据的实验结果。由图可看出，优化算法对于均匀数据可以加速较多，当$n<500000$时，优化算法的运行时间小于$5ms$。
+
+\begin{figure}
+\label{agency_experiment}
+\subfigure[随机数据]{
+\label{random_agency}
+\includegraphics[width=1\columnwidth]{pictures/random_agency.eps}}
+\subfigure[均匀数据]{
+\label{even_agency}
+\includegraphics[width=1\columnwidth]{pictures/even_agency.eps}}
+\caption{中介数优化算法性能分析}
+\end{figure}
+
+
+
+
+
+
+
 \section{基于递减进位制的一种改进}
 \subsection{中介数进位规律}
 根据 2.3 节的描述，递减进位制数法不会经常产生连续进位，因而依次生成全排列时，中介数的计 算有时是不必要的。而邻位对换算法通过交换相邻 两位来得到下一个排列，简单直接。综合两个算法 的优劣，发现当排列对应的递减进位制中介数不产 生连续进位时，可以直接交换排列的相邻两位。而 当递减进位制中介数连续进位时，中介数右端数字 都变成了0，因而排列之间也有规律可循。所以，本 文对递减进位制数法提出一种不用计算出中介数的 改进方法：
