--- a/Permutation/test.tex
+++ b/Permutation/test.tex
@@ -1,5 +1,8 @@
-\documentclass[6pt, twocolumn]{ctexart}
+%\documentclass[6pt, twocolumn]{ctexart}
+\documentclass[10pt, twocolumn]{ctexart}
+%\documentclass[10pt,conference,letterpaper]{IEEEtran}
 %\usepackage{multicol}
+\usepackage{float}
 \usepackage{color}
 \usepackage{CJK}
 \usepackage{array}
@@ -19,81 +22,147 @@
 \renewcommand{\appendixname}{附录}
 \begin{document}
 
-\title{基于四种全排列生成算法的实现与优化}
-\author{刘宁\footnote{刘宁 2016310624 liu-n16@mails.tsinghua.edu.cn}、  李秀星\footnote{李秀星 2016210987 lixx16@mails.tsinghua.edu.cn } 、 
-钟华松\footnote{钟华松 2016210988  zhonghs16@mails.tsinghua.edu.cn} \\ 清华大学计算机科学与技术系软件所\footnote{地址：北京市海淀区清华大学东主楼 }}
+
+\title{全排列生成算法的研究与优化}
+\author{秦雪迪\footnote{秦雪迪 2017310722 qxd17@mails.tsinghua.edu.cn } 、 仝美涵\footnote{仝美涵 2017310729  tongmh17@mails.tsinghua.edu.cn} 、
+田冰\footnote{田冰 2017310757 tb17@mails.tsinghua.edu.cn}  \\ 清华大学计算机科学与技术系软件所}
 \date{}
 \maketitle
-\begin{abstract}全排列生成问题指的是，对 $n$ 个不同的数$p_1 \sim p_n$，如何无重复无遗漏地生成这 $n$ 个数的所有全排列。 全排列的应用很广泛，然而复杂度往往过高，限制了其应用的范围。本文在对字典序法，递增进位制法，递减 进位制法和邻位对换法这四种全排列经典算法的研究基础上，优化了邻位对换法和递减进位制数法，提高了两 种算法的运行效率，同时通过实验对四种经典算法和优化后的算法进行了综合比较。对相关算法的进一步改进 和新算法的提出起到了参考的作用。
-	
+
+\begin{abstract}全排列生成问题指的是对于$n$个相互不同的元素，如何输出这$n$个元素所有不同的排列。本文研究并实现了字典序法、利用中介数产生全排列的字典序法、递增进位制法、递减进位制法以及邻位对换法，并通过实验对这五种算法的效率和复杂度进行了分析。同时，在这五种算法的基础上，结合动态规划和二叉树的思想，提出了三种优化求解中介数的算法，同时利用中介数未进位的特殊性，对生成后续排列的过程进行了优化。实验结果表明，我们的优化能够显著提高全排列算法的性能。 
 \end{abstract}
-	
 
-%\begin{multicols}{2}
-\section{ 前言 }
-组合数学是一门研究离散对象的科学，是计算 机科学的基础。所以，随着计算机的应用越来越普 遍，组合数学的研究将更加深入。其研究重点之一 在于计数。学习组合数学的基础就是排列组合。排 列是指从多个不同元素中取出几个元素按照一定顺 序排成一列的过程，排列的种类数称为排列数，用$P_{n}^m$表示。组合是指从多个不同元素中取 素组成一个集合的过程，组合的种类数称为组合数，用$C_n^m$表示。
+\section{引言}组合数学是一门研究离散对象的科学，是计算机科学的基础。随着计算机的应用越来越普及，组合数学的研究将更加深入。其最主要的研究内容就是对离散对象的计数\cite{卢开澄2006组合数学}。学习组合数学的基础就是排列组合。排列是指从多个不同元素中取出几个元素按照一定顺序排成一列的过程，排列的种类数称为排列数，用$P_{n}^m$表示。组合是指从多个不同元素中取出元素组成一个集合的过程，组合的种类数称为组合数，用$C_n^m$表示。
+全排列的生成算法是将给定的序列中所有可能的全排列无重复无遗漏地枚举出来。此处全排列的定义是：从$n$个元素中取出$m$个元素进行排列，当$n=m$时这个排列被称为全排列。字典序、邻位对换法、递增进位制法、递减进位制法都是常见的全排列生成算法。全排列生成算法有广泛的应用，例如可以应用在不同的组合优化问题（例如TSP问题）、$n$皇后问题、克莱姆法则\cite{李模刚2010全排列生成算法在克莱姆法则中的应用}、图论问题（例如图同构问题）等的算法设计中\cite{Maccallum1977Surveyor}。针对全排列的生成，Robert Sedgewick在1997年写了一份全排列生成算法的调查报告\cite{Sedgewick1977Permutation},对当时几乎全部的全排列生成算法做了比较，并得出一个结论：Heap提出的全排列生成算法在大多数情况下是最快的。C++的STL中定义的next\_permutation和prev\_permutation函数也是十分灵活高效的算法，被广泛应用于为指定序列生成后一个和前一个排列。除此之外，还有一类利用中介数和排列一一对应的关系，从而利用中介数生成全排列的算法，例如，字典序全排列，递增进位制法，递减进位制法以及邻位对换法等。
 
-
-
-全排列生成是指无重复无遗漏的列举出 1 到 n 的所有排列。对于全排列生成的研究有很长的一段历史，1956年，C. Tompkins 写了一篇论文介绍了一些用全排列生成算法解决问题的领域\cite{Tompkins1956Machine}。由于其算法的复杂性和多样 性已经成为组合数学和计算机领域研究的重点课题之一\cite{chenweidong}。在很多问题的求解中都会用到全排列，比 如 n 皇后问题，克莱姆法则\cite{李模刚2010全排列生成算法在克莱姆法则中的应用}，求出栈顺序等。全排列生成问题经常被用作计算机课程的课程实例讲授（例如\cite{吴素萍2008全排列递归算法在算法教学中的重要性,Dijkstra1979discipline}）。针对全排列的生成，前人已经提出了各种各样的算法， 典型的有字典序法，递增进位制法，递减进位制法， 邻位对换法，循环左移法，循环右移法等等。
-
-本文针对上述提到的前四种算法进行改进和实 现。本文的工作如下：\\
+本文即是针对这几种算法，进行研究和改进。本文的工作如下：\\
 \begin{itemize}
-  \item 介绍了四个全排列生成算法的基本原理;
-  \item 优化改进了邻位对换法和递减进位制法， 优化后的 算法平均比原算法的效率提高了接近 50\% ;
-  \item 实现 并对比四种基本全排列生成算法和改进后的算法。
+  \item 实现了五个全排列生成算法同时对算法效率和复杂度进行了分析;
+  \item 利用中介数未进位的特殊性，对生成后续排列的过程进行了优化，并通过实验比较优化前后的算法效率；
+  \item 利用基于动态规划和不同特点的二叉树的思想，提出了三种优化求解中介数的算法，并通过实验比较优化前后的算法效率； 
 \end{itemize}
 \section{相关工作}
 \subsection{字典序法}
-字典序法就是按照字典序依次求出下一个排列 的算法。这要求相邻的两个字典有尽可能长的共同 前缀，将变化限制在尽可能短的后缀上。具体方法 如下：\\
-设 $P$ 是 $1\sim n$ 的一个全排列:\\
-\begin{displaymath}
-p=p_1p_2\cdots p_n
-\end{displaymath}
-
+设 $P$ 是 $1\sim n$ 的一个全排列，$P=p_1p_2\cdots p_n$。字典序法就是按照字典序依次求出下一个排列的算法。这要求相邻的两个字典有尽可能长的共同前缀，将变化限制在尽可能短的后缀上。具体方法如下：
 \begin{enumerate}
   \item 从排列的右端开始，找出第一个比右边数字小的数字的位置$j$
   \item 找出在$p_j$右边的数字中，比$p_j$大的数中最小的数字$p_k$
-  \item 交换$p_j$和$p_k$
-  \item 将序列$p_{k+1}\sim p_{n}$倒转即可以得到下一个序列 
-\end{enumerate}	
+  \item 交换$p_j$和$p_k$，将序列$p_{k+1}\sim p_{n}$倒转即可以得到下一个序列
+\end{enumerate} 
 
-除此之外，字典序法也可以通过中介数进行计 算。中介数是计算排列的中介环节，它 的每一位由 原排列每个数字右侧比其小的数字个数构成。 其运 算过程为：原排列→中介数→新中介数→新排列。具体的计算过程如下：
+除此之外，字典序法也可以通过中介数进行计算。中介数是计算排列的中介环节，它的每一位由原排列每个数字右侧比其小的数字个数构成。 其运 算过程为：原排列→中介数→新中介数→新排列。
 
-设得到的新中介数位$a = a_1\cdots a_{n-1}$，要求的排列为$p = p_1\cdots p_n$。则$p_1 = a_1 +1$。
-设$x = \{p_j \mid p_j \le y\}, 0<j<i,1<i\le n,y=a_i + 1$。若$x \ne 0$，得到新的$x$，反复进行上述操作，直到$x=0$，则有$p_i = b$，由此可以得到心排列。
-\subsection{递增进位制数法}
-人们通常所用的进制大多是固定进位制，如 2 进制，10 进制等。$m$位$n$进制可以表示的数字个数为 $m^n$个。而递增/递减进位制数，顾名思义，是指数 字的进制随着数字位置的不同递增/递减的进制。$m$ 位递增/递减进位制数可以表示$m!$数字。例如递增进 位制 4121，它的进制从右向左依次为 2、3、4、5， 换算成十进制相当于数字 107。
+设得到的新中介数位$b = b_n\cdots b_{2}$，要求的排列为$r= r_n\cdots r_1$。\\
+\textbf{算法流程：}
+中介数初始值每一位都是$0$，根据中介数，从高位到低位依次遍历中介数从而确定排列的每一位，若当前中介数中第$i$位的值为$b_i$，就在剩余的还没有被排过的数中找出第$b_i+1$小的数，那么$r_i$就等于这个数。依次遍历完中介数的每一位后，还没被排过的数即为$r_1$位对应的数。由此，一个新的排列生成。中介数加$1$，根据上述算法产生下一个排列。直到中介数最高位等于产生进位，算法结束，所有的字典序全排列都已生成。
+\subsection{递增进位制法}
+人们通常所用的进制大多是固定进位制，如$2$进制，$10$进制等。$m$位$n$进制可以表示的数字个数为 $m^n$个。而递增/递减进位制数，顾名思义，是指数 字的进制随着数字位置的不同递增/递减的进制。$m$ 位递增/递减进位制数可以表示$m!$数字。例如递增进位制$4121$，它的进制从右向左依次为 $2$，$3$，$4$，$5$， 换算成十进制相当于数字$107$。
 
-利用递增进位制数法生成下一个全排列时，需 要将原排列与下一个排列中间相隔排列的个数转换 为递增进位制数进行加减运算。
-
-以 839647521 的下 100 个排列举例，具体步骤如下 ：
-\begin{enumerate}
-\item 将原排列映射为中介数：按照从 9 到 2 的顺序，依次求出在原排列中每个数字右侧比它小的数 字个数，放在中介数的相应位置。得递增进位制中 介数为 67342221；
-\item 由原中介数计计算出新中介数：由中介数加上 100 的递增进位制数 4020 得新中介数为 67351311；
-\item 由新中介数还原成新排列：设新中介数的位置号从左到右依次为$9，8，\cdots 2，1$。对于每一个在位置 $i$ 的中介数$x$，将其放在从右到左数第$y+1$，个未被占用 的位置，在余下的最后一个空格上填入 1，产生新排 列 869427351。
-\end{enumerate}
-\subsection{递减进位制数法}
-可以看到，递增进位制方法由于要频繁地进位， 所以算法效率受到了一定的限制。因此想到利用递 减进位制数生成全排列。其方法与递增进位制类似， 生成的中介数为递减进制中介数，恰好为递增进位 制数法得到的中介数的镜像，在此不再赘述。
+递增进位制法生成全排列可以通过中介数进行计算。设中介数位$b = b_n\cdots b_{2}$，$b_i$表示在排列中i这个数字右边比i小的数有$b_i$个，假设要求的排列为$r= r_n\cdots r_1$。\\
+\textbf{算法流程：}
+中介数初始值每一位都是$0$，根据中介数，从高位到低位依次遍历中介数从而确定排列的每一位，若当前中介数中第$i$位的值为$b_i$，则从右向左扫描所有没有被排过数字的位置，直到第$b_i+1$个位置$j$，那么$i$就在这个位置上，即$r_j=i$。依次遍历完中介数的每一位后，还没被排过的位置即为$1$所在的位置。由此，一个新的排列生成。中介数加$1$，根据上述算法产生下一个排列。由此，一个新的排列生成。中介数按照递增进位制加法加1，根据上述算法产生下一个排列。直到中介数最高位等于产生进位，算法结束，所有的递增进位制法全排列都已生成。
+\subsection{递减进位制法}
+在通过递增进位制的加法生成下一个中介数时，由于递增进位制越低位进制越小，所以在加法的过程中极易产生进位，算法效率受到了限制，因此，提出了一种新的算法：递减进位制法。和递增进位制法不同，递减进位制越高位进制越小。在通过中介数生成全排列时，算法流程与递增进位制法类似。\\
+\textbf{算法流程：}
+设中介数位$b = b_2\cdots b_{n}$，$b_i$表示在排列中i这个数字右边比i小的数有$b_i$个，假设要求的排列为$r= r_n\cdots r_1$。中介数初始值每一位都是$0$，根据中介数，从低位到高位依次遍历中介数从而确定排列的每一位，若当前中介数中第$i$位的值为$b_i$，则从右向左扫描所有没有被排过数字的位置，直到第$b_i+1$个位置$j$，那么$i$就在这个位置上，即$r_j=i$。依次遍历完中介数的每一位后，还没被排过的位置即为1所在的位置。由此，一个新的排列生成。中介数按照递增进位制加法加$1$，根据上述算法产生下一个排列。直到中介数最高位等于产生进位，算法结束，所有的递减进位制法全排列都已生成。
 \subsection{邻位对换法}
-由递减进位制数法可以得到启发，通过交换相 邻两位来得到下一个排列，由此便产生了邻位对换 法。递减进位制数字的换位是单向的，从右向左， 逐个换位，直到最左端。邻位对换法的换位是双向 的，通过保存数字的“方向性”来快速得到下一个 排列，得到的中介数是递减进位制数。 具体步骤如 下：
+递增进位制和递减进位制数字的换位是单向的，而邻位对换法的换位是双向的，通过保存数字的``方向性"来快速得到下一 个排列。\\
+\textbf{算法流程：}
+设中介数位$b = b_2\cdots b_{n}$，$b_i$表示在排列中$i$这个数字右边比i小的数有$b_i$个，假设要求的排列为$r= r_n\cdots r_1$。由中介数得到排列时，假设第$b_k$位的值为$i$，方向是向左的，就从右向左扫描所有没有被占过的位置，知道第$b_i+1$位置$j$，那么$i$就在这个位置上，即$r_j=i$。如果方向是向右的，那么转化成向左的进行计算，即表示$i$的左边比$i$小的数有$b_i$个 也即相当于i的右边比i小的数有$i-1-b_i$个。依次遍历完中介数的每一位后，还没被排过的位置即为1所在的位置。由此，一个新的排列生成。中介数按照递增进位制加法加$1$，根据上述算法产生下一个排列。直到中介数最高位等于产生进位，算法结束，所有的临位对换法全排列都已生成。
+
+\section{算法效率和时间复杂度分析}
+\subsection{时间复杂度分析}
+$n$个数字的全排列一共有$n!$种，所以全排列算法至少是$O(n!)$的。字典序算法在生成下一个排列时需要扫描全排列找出第一个下降的数字并交换，因此字典序算法的时间复杂度是$O(n*n!)$；采用中介数的字典序法、递增进位制数法、递减进位制数法和邻位对换法在求下一个全排列时，需要先生成中介数，而生成中介数的时间复杂度是$O(n^2)$，因此它们的时间复杂度是$O(n^2*n!)$。所以实际上，全排列算法对大型的数据是无法处理的。也正因为如此，研究如何降低全排列生成算法的时间复杂度是非常重要的。
+
+
+\subsection{几种全排列生成算法的效率分析}
+本节我们比较了字典序算法（DIC1）以及基于中介数的字典序算法（DIC2）、递增进位制法（INCRE）、递减进位制法（DIM）以及邻位对换法（EXCHANGE）这五种算法在生成全部排列方面的性能，如图\ref{quan_experiment} 所示。
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\columnwidth]{pictures/quan.eps}
+\caption{全排列生成算法比较}
+\label{quan_experiment}
+\end{figure}
+
+从图中可以看出，不使用中介数的字典序算法是五种算法中最快的算法，而使用中介数的邻位对换法是五种算法中最慢的算法。当排列的位数超过$10$后，使用中介数的四种算法性能急剧下降，这是因为由排列得到中介数和由中介数得到排列的计算次数急剧增加。可见当位数较大时，使用中介数作为媒介会大大降低全排列生成算法的性能。
+
+
+\section{ 利用中介数未进位的特殊性生成后续排列 }
+\subsection{特殊性分析}
+在四种算法中，如若我们希望求当前排列数$P$的后第$A$个排列数,在中介数没有发生进位的情况下，我们可以通过移动原排列数的若干位，直接生成新的排列数。
+
+\iffalse
+设$P$是$1\sim n$的一个全排列，$P=p_1p_2\cdots p_n$，那么定义$C$：
+\begin{displaymath}
+C=c_1c_2\cdots c_n
+\end{displaymath}
+\begin{equation}
+c_i=\|\{x < p_i\mid x\in\{p_1p_2\cdots p_{i-1}\}\|
+\end{equation}
+设A对应的字典序进制下的数a为
+\begin{displaymath}
+a=a_1a_2\cdots a_n-1
+\end{displaymath}
+那么，当$a$满足下述式子时，$P$生成新排列的过程中中介数不会发生进位。
+\begin{equation}
+a_i\leq c_i 
+\end{equation}
+\begin{displaymath}
+0\leq i\leq n
+\end{displaymath}
+同理，求排列数$P$的前第$A$个排列数时，中介数不发生变化的条件是
+\begin{equation}
+c_i=\|\{x < p_i\mid x\in\{p_{i+1}p_{i+2}\cdots p_n\}\|
+\end{equation}
+\begin{equation}
+a_i\leq c_i 
+\end{equation}
+\begin{displaymath}
+0\leq i\leq n
+\end{displaymath}
+\fi
+
+设$P$是$1\sim n$的一个全排列，$P=p_1p_2\cdots p_n$，数组$I$存储排列中每个数字的下标，则$I_{i}$表示数字$i$在排列$P$中的位置。定义$C$为：
+\begin{displaymath}
+C=c_1c_2\cdots c_n
+\end{displaymath}
+\begin{equation}
+c_i=|\{x < i\mid x\in\{p_1p_2\cdots p_{I_i-1}\}|
+\end{equation}
+设$A$对应的递减进制下的数为$a=a_1a_2\cdots a_{n-1}$，那么若$\forall i\in[1,n]$，$a_i \leq c_i$都成立，则$P$生成新排列的过程中中介数不会发生进位。同理，求排列$P$的前第$A$个排列数时，中介数不进位的条件是$\forall i\in[1,n]$，$a_i\leq c_i$都成立，其中$c_i=|\{x < i\mid x\in\{p_{I_i+1}p_{I_i+2}\cdots p_n\}|$。
+
+
+
+下述算法是在该条件成立下计算新排列数的。
+\subsection{算法介绍}
+该算法省去了生成中介数的过程，可以直接根据原排列$P$和改变量$A$，求出新的排列数，具体流程如下：
 \begin{enumerate}
-	\item 初始化：初始序列为从 1 到 n 的升序序列， 每个元素的方向向左；
-	\item 查找当前序列的最大可移动数$p_i$ ：可移动数 该数沿着箭头方向的一侧有比其小的数；
-	\item 按照箭头方向，将该可移动数$p_i$ 和其相邻的数 交换；
-	\item 翻转所有大于$p_i$数的箭头方向，即可得到下 一个排列；
-\end{enumerate}
-邻位对换法也可以通过中介数来生成序列的全 排列。。设当前序列的中介数为$a = a_1\cdots c_{n-1}$，下一个排列为$p = p_1 \cdots p_n$，则从排列的右端到左端，依次判断$p_i$的奇偶性。若$p_i$为奇数，其方向性由$a_{i-1}$决定，奇向右、偶向左；若$p_i$为偶数，其方向性决 定于$a_{i-1}+a_{i-2}$的奇偶性，同样是奇向右、偶向左。当得到方向性后，$a_i$的值就是背向$p_i$的方向直到排列 边界这个区间里比$p_i$小的数字的个数。如此就能得 到邻位对换法的中介数，同理，可以通过中介数推 断当前序列的方向，从而得出该排列。
+  \item 遍历排列数$P$,计算$C$,并将$2\sim n$所处位置的下标记录在位置数组$I$中
+  \item 根据选择的算法，将$A$转换位递增进制数或者递减进制数
+  \item 判断$A$与$C$是否满足公式（1）中所给的条件。若不满足，则终止算法
+  \item 从后向前遍历$I$，假设当前遍历到$I$的第$i$位$I_i$
+  \item 根据$I_i$中记录的位置信息，找到数字$i+2$在原排列中的位置
+  \item 从数字$i+2$开始，与比其小的数字交换$a_i$次，求出该数字在新排列中的位置
+  \item 当$i$等于0时结束算法 
+\end{enumerate} 
+\subsection{优化算法性能分析}
+上述流程中，前三步的时间复杂度都为$O(n)$，后三步时间复杂度近似于$O(n^2)$,虽然与传统算法的时间复杂度一致，但是与其相比，该算法省去了生成中介数，再反向生成新排列的过程，在实际的实验中我们可以看到明显的速度提升。
+
+\iffalse
+实现该算法需要存储数组$P$,$A$,$N$,他们的长度分别为n,n-2,n-2，因此该算法的空间复杂度为O(n),可以看到与传统的递减进制数算法相比算法多出了$N$,$C$这两个数组，少了存储新排列的数组，但是整体来说两者的空间复杂度是一致的。
+\fi
 
 
 
 
-
-\section{基于中介数的求后续排列优化}
+\section{基于动态规划生成中介数}
+基于中介数的四种全排列生成算法的时间复杂度为$O(n^2*n!)$，其中求解中介数的时间复杂度为$O(n^2)$。以字典序为例，当$n=100000$时， 仅求解中介数就需要大约$24s$，这是十分耗时 的。因此本节和下一节提出了两种优化求解中介数的算法：基于动态规划和二叉树生成中介数的算法。本节将详细介绍基于动态规划生成中介数的算法思想。
+\iffalse
 在很多应用场景下，我们需要求出某个排列后面的第$m$个排列。\textcolor{red}{比如...？}设原排列为$P$，目标排列即原排列的后续第$m$个排列为$\bar{P}$。在字典序法，递增进位制法，递减进位制法和邻位对换法中求$\bar{P}$的方法一般为首先找到原排列的中介数$A$，然后将中介数加$m$得到新的中介数$\bar{A}$，依据新的中介数找到目标排列。本节基于动态规划的思想，提出了一种优化求解中介数的算法，该算法在一般情况下可以优化一般算法$3-3.5$倍时间。
+
 \subsection{求后续排列的一般算法}
 以字典序算法为例，算法\ref{next_permutation} 给出了求目标排列的基本流程。首先通过GET\_AGENCY函数获取原排列$P$的中介数$A$，将$m$按照中介数进制（从左到右每位的进制依次是$n,n-1,...,2$）表示，得到$A_m$（第3-6行）。然后将$A$和$A_m$相加，得到$\bar{A}$（第7-17行）。最后根据新的中介数$\bar{A}$求出目标排列$\bar{P}$。
-\begin{algorithm}
+\begin{algorithm}[!t]
 \caption{NEXT\_PERMUTATION (P,m,n)}
 \label{next_permutation}
 \begin{algorithmic}[1]
@@ -121,42 +190,6 @@ p=p_1p_2\cdots p_n
 
 
 
-\iffalse
-\begin{equation}
-f(n,i) =\begin{cases}
-n&if \quad i \ne 0(mod \quad n)\\
-f(n-1,\lfloor \frac{i}{n} \rfloor ) & else	
-\end{cases}
-\end{equation}
-
-
-\begin{equation}
-A[I[i]]=\begin{cases}
-i−1−A[I[i]]       \quad \quad  S1=S         \\
-A[I[i]]        \quad   \quad \quad \quad   S2=S   \\
-\begin{cases}
-A[I[i+1]]+A[I[i]] \quad I[i]<I[i+1]  \\
-A[I[i+1]]−A[I[i]]−1  \quad I[i]>I[i+1] \\
-\end{cases}
-\end{cases}
-\end{equation}
-
-\begin{equation}
-A[I[i]]=\left\{
-\begin{array}{ll}
-i−1−A[I[i]] &  S1=S         \\
-A[I[i]]     &  S2=S   \\
-  \multicolumn{2}{l}{\left\{
-  \begin{array}{llll}
-    A[I[i+1]]+A[I[i]]   & I[i]<I[i+1]  \\
-    A[I[i+1]]−A[I[i]]−1 & I[i]>I[i+1] \\
-  \end{array}
-  \right.}
-\end{array}\right.
-\end{equation}
-\fi
-
-
 
 \subsection{求中介数的一般算法}
 在字典序算法中，中介数$A[i]$表示$P[i]$右边比$P[i]$小的数字的个数。算法\ref{get_agency} 给出了求解中介数的一般算法。该算法包括两层循环，外层循环遍历排列中的每一个数，内层循环找出这个数对应的中介数，即找出该数右侧比它小的数字个数。因此算法\ref{get_agency} 的时间复杂度为$O(n^2)$。当$n=100000$时，仅求解中介数就需要大约$24s$，这是十分耗费时间的。因此改进中介数的求解算法是十分必要的。
@@ -176,16 +209,16 @@ A[I[i]]     &  S2=S   \\
 \RETURN $A$
 \end{algorithmic}
 \end{algorithm}
+\fi
 
 
-
-\subsection{求中介数的优化算法}
-通过观察中介数的求解过程，我们得到了两个重要的结论：
+\subsection{原理分析}
+以字典序为例，通过观察中介数的求解过程，我们得到了两个重要的结论：
 \begin{enumerate}
-  \item 当求解排列中某个数$i$的中介数时，设$i$左右两侧排列分别为$P1$，$P2$，若$i$左侧数字个数小于右侧数字个数，即$|P1|<|P2|$，那么扫描$P1$中比$i$小的数字个数可以更快的得到$i$的中介数；
-  \item 设$i$与$i+1$之间的排列为$P3$，若已知$i+1$的中介数，且$i$与$i+1$在排列$P$中距离很小，即$|P3|<min(|P1|,|P2|)$，那么可以通过$i+1$的中介数快速求解出i的中介数；
+  \item 当求解排列中数字$i$的中介数时，设$i$左右两侧排列分别为$P1$，$P2$，若$i$左侧数字个数小于右侧数字个数，即$|P1|<|P2|$，那么扫描$P1$中比$i$小的数字个数可以更快的得到$i$的中介数；
+  \item 设$i$与$i+1$之间的排列为$P3$，若已知$i+1$的中介数，且$i$与$i+1$在$P$中距离很小，那么可以通过$i+1$的中介数快速求解出i的中介数；
 \end{enumerate}
-设$P=P[1],P[2],...,P[n]$，数组$I$存储排列中每个数的下标，即$I[P[i]]=i$。综合以上观察，在求解排列中数i的中介数时，由于$i$在$P$中的位置为$I[i]$，故$P1=P[1:I[i]]$，$P2=P[I[i]+1:n]$，$P3=P[I[i]:I[i+1]]$，令$P_{min}=min(P1,P2,P3)$，即$P1$，$P2$，$P3$中最短的一段，通过扫描$P_{min}$中比$i$小的数字个数（设为$t$）来计算$i$的中介数，即$A[I[i]]$，可以有效缩短计算中介数的时间。当$P1$最短时，$t$为$i$左侧比$i$小的数字个数，而比$i$小的数字个数共有$i-1$个，故$A[I[i]]=i-1-t$；当$P2$最短时，$A[I[i]]=t$；当$P3$最短时，若$i$位于$i+1$左侧，即$P=...,i,...,i+1,...$，由于比$i+1$小的数都会比i小，故而$i$的中介数等于$t$加上$i+1$的中介数，若$i$位于$i+1$的右侧，即$P=...,i+1,...,i,...$，则$i$的中介数等于$i+1$的中介数减去$1+t$。算法\ref{get_agency_optimization} 展示了这一过程。
+设$P=P[1],P[2],...,P[n]$，数组$A$存储排列中每个数字对应的中介数，即$A[i]$为$P[i]$的中介数；数组$I$存储排列中每个数的下标，即$I_{i}$表示数字$i$在排列$P$中的位置。综合以上观察，在求解排列中数i的中介数时，由于$i$在$P$中的位置为$I[i]$，故$P1=P[1:I[i]]$，$P2=P[I[i]+1:n]$，$P3=P[I[i]:I[i+1]]$，令$P_{min}=min(P1,P2,P3)$，即$P1$，$P2$，$P3$中最短的一段，通过扫描$P_{min}$中比$i$小的数字个数（设为$t$）来计算$i$的中介数，即$A[I[i]]$，可以有效缩短计算中介数的时间。当$P1$最短时，$t$为$i$左侧比$i$小的数字个数，而比$i$小的数字个数共有$i-1$个，故$A[I[i]]=i-1-t$；当$P2$最短时，$A[I[i]]=t$；当$P3$最短时，若$i$位于$i+1$左侧，即$P=\cdots i \cdots i+1 \cdots$，由于比$i+1$小的数都会比i小，故而$i$的中介数等于$t$加上$i+1$的中介数，若$i$位于$i+1$的右侧，即$P=\cdots i+1\cdots i \cdots$，则$i$的中介数等于$i+1$的中介数减去$1+t$。算法\ref{get_agency_optimization} 展示了这一过程。
 
 \iffalse
 \begin{equation}
@@ -208,8 +241,8 @@ A[I[i+1]]−A[I[i]]−1  & S3=S  \\
 \fi
 
 
-\begin{algorithm}
-\caption{GET\_AGENCY\_OPTIMIZATION (P,n)}
+\begin{algorithm}[!t]
+\caption{DP (P,n)}
 \label{get_agency_optimization}
 \begin{algorithmic}[1]
 \STATE calculate $I$ from $P$
@@ -235,15 +268,99 @@ A[I[i+1]]−A[I[i]]−1  & S3=S  \\
 \RETURN $A$
 \end{algorithmic}
 \end{algorithm}
-
-
 \subsection{优化算法性能分析}
-优化算法每次扫描的排列序列为$P1$，$P2$，$P3$中最短的一段，因此从理论上来说优化算法可以有效减少求中介数的时间。而且当排列较为均匀，即$\sum_{i=1}^{n-1}\left|I[i]-I[i+1]\right|$较小时（比如$P=1,2,3,...,n$），由于$P3$很小，优化算法可以在接近$O(n)$的时间内求出排列的中介数。为了对优化算法进行性能分析，我们设计了一系列实验来进行测试。
-图\ref{random_agency} 给出了求中介数一般算法和优化算法对随机生成排列的实验结果。由图可知，当$n<1000$时，GET\_AGENCY和GET\_AGENCY\_OPTIMIZATION的性能所差无几，而当$n>1000$后，优化算法大致可以加速一般算法$3-3.5$倍。
-图\ref{even_agency} 给出了算法关于均匀数据的实验结果。由图可看出，优化算法对于均匀数据可以加速较多，当$n<500000$时，优化算法的运行时间小于$5ms$。
+优化算法每次扫描的排列序列为$P1$，$P2$，$P3$中最短的一段，因此从理论上来说优化算法可以有效减少求中介数的时间。而且当排列较为均匀，即$\sum_{i=1}^{n-1}\left|I[i]-I[i+1]\right|$较小时（比如$P=1,2,3,...,n$），由于$P3$很小，优化算法可以在接近$O(n)$的时间内求出排列的中介数。
 
-\begin{figure}
-\label{agency_experiment}
+
+
+
+\section{ 利用二叉树生成中介数}
+\subsection{原理分析}
+当我们从排列数生成中介数时，实际是在求每位数字在排列数中右边比它小的数的个数，那么我们可以从右向左构建二叉树来优化这一过程。
+设$P$是$1\sim n$的一个全排列，$P=p_1p_2\cdots p_n$，设$A$是$P$对应的中介数，$A=a_1a_2\cdots a_{n-1}$。树中每个结点T由以下三个元素构成：
+
+\begin{tabular}{m{1cm} l m{8cm}}
+\\
+$d$ & 记录排列数 \\
+$l$ & 记录左孩子的数目\\ 
+$m$ & 记录排列数对应的中介数\\
+\\
+\end{tabular}
+
+这里我们以递减进位制为例来说明我们的算法，递增进位制，字典序进位制类似。
+
+我们从$p_n\sim p_1$自后向前依次计算中介数。假设当前计算到$p_i$的中介数$a_{i-1}$,那么我们先利用$p_i$构建一个树的结点$T_i$，从树根$T_0$开始，将$T_i$依次与树中的结点比较。
+假设我们比较到第$k$个结点$T_k$,如果$T_k$中存储的排列数比$T_i$存的小,则走左岔路，并更新$T_k$左孩子的个数；如果结点$T_k$中存储的排列数比$T_i$存的大，则走右岔路，并更新$T_i$的中介数。一旦$T_i$到达叶结点，则终止算法。其中左孩子和中介数的更新规则为$l_k= l_k + 1$，$m_i = m_i + l_k + 1$。
+\iffalse
+\begin{equation}
+l_k= l_k + 1
+\end{equation}
+\begin{equation}
+m_i = m_i + l_k + 1
+\end{equation}
+\fi
+
+图\ref{example1} 展示了排列``361452"生成中介数的过程。其中每个结点存储两个信息，第一个为该节点的左孩子数，第二个为该节点对应的中介数。可以看到每插入一个结点，根据该节点第二个中介数信息，就能够立刻得到该结点对应的中介数。
+\begin{figure}[!t]
+\includegraphics[width=1\columnwidth]{pictures/example1.pdf}
+\caption{利用二叉树生成中介数}
+\label{example1}
+\end{figure}
+
+
+\subsection{利用平衡二叉树进一步优化算法}
+可以看到，上述算法构建的树并不平衡，这会导致插入效率降低，为了更好的时间性能，我们引用了AVL平衡二叉树\cite{Adel1962An}。
+我们将树的节点重新定义如下：
+
+\begin{tabular}{m{1cm} l m{8cm}}
+\\
+$d$ & 记录排列数 \\
+$l$ & 记录左孩子的数目\\ 
+$r$ & 记录右孩子的数目\\
+$a$ & 记录左树的深度\\
+$b$ & 记录右树的深度\\
+$m$ & 记录排列数对应的中介数\\
+\\
+\end{tabular}
+
+图\ref{example2} 显示了排列``361452"在平衡二叉树上的计算流程。每插入完一个节点，自底向上地采用单旋或者双旋的方法，调整一次树，保证每个节点左右树深之差不超过1，使得算法的效率得到进一步的提高。
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\columnwidth]{pictures/example2.pdf}
+\caption{利用平衡二叉树生成中介数}
+\label{example2}
+\end{figure}
+\subsection{优化算法性能分析}
+可以看到，我们需要从右向左依次寻找中介数，该过程为$O(n)$。而寻找中介数的过程实际为$p_i$插入二叉树的过程，该过程的时间复杂度为$O(log(n))$。因此，最终算法的时间复杂度为$O(n*log(n))$。可以看到相比于传统算法$O(n^2)$的复杂度，该算法的复杂度更低，后续实验也证实了该算法的时间优越性。
+
+
+
+\section{实验}
+为了对优化算法进行性能分析，我们设计了一系列实验来进行测试。本文的所有实验都是在一个16GB内存，2.5GHZ的Intel Core i7处理器的Macbook Pro上进行的。
+\subsection{利用中介数未进位的特殊性生成后续排列}
+我们依次令$n$取不同的值，随机生成排列$P$和一个满足算法条件的正整数$a$，分别使用递减进位制算法和优化的算法求解$P$的后第$a$个排列，记录计算时间，得到图\ref{teshu} 。由图可知，优化算法省去了大量不必要的计算，极大缩短了计算时间。
+\begin{figure}[H]
+\includegraphics[width=1\columnwidth]{pictures/teshu.eps}
+\caption{后续排列优化算法性能分析}
+\label{teshu}
+\end{figure}
+%\iffalse
+%总的来说，该算法可以在以下两个场景中极大的提高算法的效率。
+%\begin{itemize}
+%  \item 生成$1\sim n$的所有全排列。
+%  \item 从排列$P$直接生成后第$a$个排列，或者前第$b$个排列。
+%\end{itemize} 
+%\fi
+\subsection{生成中介数的对比实验}
+我们依次令$n$取不同的值，以字典序为例，比较生成中介数的常规算法（BASELINE），动态规划算法（DP），二叉树算法（BINARY\_TREE），平衡二叉树算法（AVL）对随机生成排列和均匀排列的运行时间。其中均匀排列即为$\sum_{i=1}^{n-1}\left|I[i]-I[i+1]\right|$较小的排列，实验中取$P=1,2,3,\cdots,n$。
+\iffalse
+
+图\ref{agency_experiment} 给出了利用常规算法和优化算法求中介数的实验结果。和常规的递减进位制算法生成中介数相比，三种优化算法均提高了生成中介数的效率。对于基于动态规划的算法，当$n<1000$时，GET\_AGENCY和GET\_AGENCY\_OPTIMIZATION的性能所差无几，而当$n>1000$后，优化算法大致可以加速一般算法$3-3.5$倍。对于基于二叉树的算法，当$n=1^4$时，普通二叉树算法的速度是传统算法的100倍，当$n=1^5$时，普通二叉树算法的速度是传统算法的700倍，并且随着n的增加，加速的效果愈加显著。
+
+同时，我们观察到，三种优化算法对于分布特点不同的原排列，其优化能力是不同的。由图可看出，基于动态规划的算法对均匀数据的优化能力最强，因为它每次扫描的排列序列为$P1$，$P2$，$P3$中最短的一段，因此当排列较为均匀，即时（比如$P=1,2,3,...,n$），由于$P3$很小，优化算法可以在接近$O(n)$的时间内求出排列的中介数。基于二叉树的算法对非均匀数据的优化能力最强，每插入一个结点，根据该节点第二个中介数信息，就能够立刻得到该结点对应的中介 数，该过程的时间复杂度近似为 log(n)。而基于平衡二叉树的优化算法在均匀数据和非均匀数据上都有较好的性能，表现非常稳定。
+\fi
+\begin{figure}[!t]
+\centering
 \subfigure[随机数据]{
 \label{random_agency}
 \includegraphics[width=1\columnwidth]{pictures/random_agency.eps}}
@@ -251,102 +368,27 @@ A[I[i+1]]−A[I[i]]−1  & S3=S  \\
 \label{even_agency}
 \includegraphics[width=1\columnwidth]{pictures/even_agency.eps}}
 \caption{中介数优化算法性能分析}
+\label{agency_experiment}
 \end{figure}
 
+图\ref{agency_experiment} 给出了利用常规算法和优化算法求中介数的实验结果。可以看到，对于随机数据，三种优化算法均提高了生成中介数的效率。从优化效果上来看，BINARY\_TREE $>$ AVL $>$ DP。由于基于二叉树的中介数求解算法效率较原算法有量级提升（由$O(n^2)$到$O(n*log(n))$），故其效率远高于DP算法；而DP算法大致可以加速一般算法$3 \sim 3.5$倍。由于数据随机，使得非平衡二叉树也基本处于平衡的状态，故BINARY\_TREE算法整体上优于AVL算法。
+
+对于均匀数据，可以看到DP算法是三种优化算法中最快的，由于数据较为均匀，故而算法时间复杂度接近$O(n)$。而BINARY\_TREE算法不仅没有加速常规算法，反而使得效率变低。这是由于此时二叉树处于极度不平衡状态，基本接近于线性查询，故而效率变低。但此时AVL算法和随机数据时性能基本保持一致。
+
+综合以上分析，我们可以得出以下结论：1）AVL算法在随机数据和均匀数据上都有较好的性能，表现相对稳定，可以应用于对算法稳定性要求较大的场景；2）若数据较为均匀，采用DP算法可以有更好的加速效果；反之，采用BINARY\_TREE算法可以得到更好的结果。因此在求解中介数之前，可以通过判断$\sum_{i=1}^{n-1}\left|I[i]-I[i+1]\right|$的值来决定采用何种算法。
 
 
 
-
-
-
-\section{基于递减进位制的一种改进}
-\subsection{中介数进位规律}
-根据 2.3 节的描述，递减进位制数法不会经常产生连续进位，因而依次生成全排列时，中介数的计 算有时是不必要的。而邻位对换算法通过交换相邻 两位来得到下一个排列，简单直接。综合两个算法 的优劣，发现当排列对应的递减进位制中介数不产 生连续进位时，可以直接交换排列的相邻两位。而 当递减进位制中介数连续进位时，中介数右端数字 都变成了0，因而排列之间也有规律可循。所以，本 文对递减进位制数法提出一种不用计算出中介数的 改进方法：
-\begin{algorithm}
-\caption{DECREASE\_IMPROVEMENT ( p,n)}
-\label{alg2}
-\begin{algorithmic}[1]
-\PRINT p
-\FOR{$i \leftarrow 1$ to $n$}
-\STATE find the first $i$ where $p[i] \ne n+1-i$
-\IF{$i > n$}
-\RETURN permutation generation end
-\ENDIF
-\FOR{$j \leftarrow i+1$ to $n$}
-\STATE find first $j$ where $p[j] = n+1 -i$
-\ENDFOR
-\STATE \textbf{swap} $p[j]$,$p[j-1]$
-\FOR{$k \leftarrow i$ to $n$ }
-\STATE {$p[k-i+1] \leftarrow p[k]$}
-\ENDFOR
-\FOR{$r \leftarrow n-i+2$ to $n$}
-\STATE {$p[r] \leftarrow r$}
-\ENDFOR
-\ENDFOR
-\end{algorithmic}
-\end{algorithm}
-
-假设$P$是$1 \sim n$的一个全排列，$p = p_1 \cdots p_n$ ，对应的中介数为$a = a_1 \cdots a_{n-1}$,若从$p = 1,2 \cdot n$开始生成全排列，则初始时中介数$𝑎 = 0$，由于$a_{n-1}$ 对应 的是数字 $n$ 右侧比 $n$ 小的数字的个数，所以$a_{n-1}$ 连 续加 1 不会立刻产生进位。因此，$p$ 中只有 $n$ 对应 的中介数相应的位数加 1，也就是排列 p 中位于 n 右边的比 n 小的数的个数加 1。这时，其他数的相对 位置不变，所以只需将 n 连续地与其左边的数交换 位置，直到$p_1=n$。
-
-当$p_1 =n$时，排列数对应的中介数加 1 会产生 进 位 。假 设 此 时 的 中 介 数 为$a = a_1 \cdots a_{n-1}$，连续进位位数为 2 ， 即$a_{n-1}=n-1,a_{n-2}=n-2 ,a_{n-3}<n-3$，所以$a_{n-3}^{'}=a_{n-3}+1$，，也就是$n − 2$右侧多了一个比它小的数，对应到排列中，就是$n − 2$和它左边的数交换 了位置。所以，需要在排列 $p$ 中找到连续下降序列 最后一位的数字 $x$，假设其在位置 $j$，然后找到比它 小 1 的数 $y$，与其左边数交换，再把连续下降序列翻 转放在排列末尾即可。
-
-由原排列求出相邻的下一个排列的算法伪代码(DECREASE\_IMPROVEMENT $( p,n)$)。
-
-以 1,2,3,4 的全排列举例，其全排列生成过程如下：$1 2 3 4 → 1 2 4 3 → 1 4 2 3 → 4 1 2 3 → 1 3 2 4 → 1 4 2 3 → …→ 4 3 2 1$。其中，生成 $1 2 3 4 → 1 2 4 3 → 1 4 2 3 →4 1 2 3$ 的过程中，中介数不进位，4 依次 与前面的数交换位置，而 $4 1 2 3 → 1 3 2 4$ 的生成过 程中，3 与 2 交换位置，4 插入排列尾部。之后的生 成一直重复这一过程。
-\subsection{优化算法复杂度分析}
-由上述的分析可知，当$p+1\ne n$ 的时候，要进行 置换得到新的排列，复杂度为$O(n)$，而已知全排列 个数为$n!$，所以外层循环的复杂度为$O(n!)$，进而可 得算法复杂度为$O(n * n!)$，相比递减进位制$O(n^2*n!)$的复杂度提高了一个数量级。
-\section{实验}
-本文在 4G 内存，Intel(R) Core(TM) i5-4200M 处 理器，2.50GHZ 主频，64 位操作系统的笔记本电脑 上进行实验。
-\subsection{基于邻位对换法的对比}
-本节主要对比以下三种算法：
-
-\emph{基于蛮力法的邻位对换}：该方法采用邻位对换 法的基本思想，在查询最大可移动数时， 从大到小 遍历当前排列中的元素，直到找见某个元素，该元 素满足沿着该元素的箭头方向有小于该元素的数。
-
-\emph{基于维护数组的邻位对换}：该方法在蛮力法的 基础上，增加一个长度为n的数组leftlittle来 有元素的左边比其小的元素个数。则比元素i小并位 于其右侧的元素个数为$i-1-leftlittle[i]$。该数组需 要在交换排列中元素的时候分情况修改。
-
-\emph{基于公式的邻位对换}：该方法使用公式(1)求解 最大可移动数。
-\begin{figure}
-\centering	
-
-\caption{邻位对换法算法比较图}
-\includegraphics[width=7cm, height=4cm]{1.png}	
-\end{figure}
-
-通过图1 可知，在 $n$ 值一定的情况下，基于 蛮力法的邻位对换算法运行最慢，其次是基于维护 数组的邻位对换，效果最好的是基于公式的邻位对换算法。基于公式的邻位对换算法在 n 值越大的情 况下效果越明显。相比于原算法，优化后的算法运 行时间降低了将近一半，运行效率提高了 50\%。
-\subsection{基于递减进位制法的对比}
-
-本节主要对比一下两种算法：
-
-\emph{递减进位制数法}：该方法采用递减进位制中介 数，先计算当前排列的递减进位制中介数，再计算 出新的中介数，进而推断出新排列。
-
-\emph{优化的递减进位制法}：该方法利用了递减进制 中介数的进位规律，通过交换原排列中相应元素的 位置，在不计算中介数的前提下，推出下一个排列。
-\begin{figure}
-\centering	
-
-\caption{递减进位制算法比较}
-\includegraphics[width=7cm, height=4cm]{2.png}	
-\end{figure}
-由图2 可见，当 n 值较小时，两种方法的运 行时间差别不明显。而当 n 值大于等于 10 时，优化 的递减进位制法的运行时间明显小于原算法。这是 因为改进算法只需对排列元素进行一遍操作，便能 找出下一个排列，所以相较于原算法，运行时间降 低了一个数量级。
-
-
-\subsection{四种基本全排列算法及两种优化算法的对比}
-我们将上文提到的两种改进算法和第一部分提 到的四种基本算法进行对比，分析比较得出各种算 法的优缺点，并给出下一步优化方案。
-
-\begin{figure}
-\centering	
-
-\caption{四种基本全排列算法及两种优化算法的比较}
-\includegraphics[width=7cm, height=4cm]{3.png}	
-\end{figure}
-如图3 所示，本文提到的七种算法效果最好 的是基于公式的邻位对换法，其次是优化的递减进 位制法。其中在 n=12 时，递减进位制法和递增进位 制法已不能在规定时间内运行完毕，而字典序法的 瓶颈在n = 13。可见在求全排列的过程中递减进位 制法和递增进位制法效率较低，主要原因是上述两 种算法通过中介数列举全排列，导致转化过程较为 复杂。
 \section{总结与展望}
-本文深入研究了全排列的四种经典算法，字典 序法，递增进位制数法，递减进位制法和邻位对换 法，并对比了其算法效率。根据邻位对换法最大可 移动数的规律，在查找最大可移动数的算法上进行 了优化 ， 以提高查找 最大 可移动数的效率。 将原$O(n^2*n!)$的复杂度降为$O(n* n!)$，在 n 值固定的情况 下，运行时间降低了 50\%。同时，通过观察递减进 位制数法排列和中介数的规律，对其进行改进，使 其时间复杂度由$O(n^2*n!)$优化到了$O(n * n!)$。当 n 相 对较小时，算法有着明显的时间效率优势。
+本文深入研究了全排列的五种经典算法，普通字典序法，基于中介数的字典序法、递增进位制数法，递减进位制法和邻位对换法，并对比了其算法效率。同时，在这五种算法的基础上，结合动态规划和二叉树的思想，提出了三种优化求解中介数的算法。除此之外，对于求解当前排列后特殊位的排列，通过利用当中介数没有发生进位时的特殊性，我们省略了生成中介数的步骤，通过移动原排列数的若干位，直接生成新的排列。实验结果表明，我们的优化能够显著提高全排列算法的性能。 同时，生成中介数的三种优化算法对分布特点不同的排列，还表现出不同的优化能力，因此我们需要根据应用场景选择合适的算法，以达到优化的目的。
 
-
-
-综上所述，本文实现并比较了四种全排列生成 算法，并对邻位对换法和递减进位制法进行了初步 的优化。然而，本文所实现的优化算法还不够完美， 例如递减进位制改进算法，当 n 相对较小时，算法 优化程度明显提高，但随着 n 的增大，算法的时间 优势不再明显。如何从本质上进一步提高全排列生 成算法的效率，是下一步需要考虑的问题。
+\iffalse
+综上所述，本文实现并比较了五种全排列生成 算法，并对其进行了优化。然而，本文所实现的优化算法还不够全面，如何对中介数生成排列的过程进行优化是下一步需要考虑的问题。
+\fi
 \printbibliography
 %\end{multicols}
+
+
 
 
 \end{document}
